# session-viewer

./: .gitignore  CHANGELOG.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: blocklist.rs  commands.rs  identity.rs  lib.rs  main.rs  report.rs  scan_dirs.rs  shared_models.rs  state.rs  updater.rs  version_check.rs
src-tauri/src/claude/commands/: messages.rs  mod.rs  projects.rs  report.rs  search.rs  sessions.rs  stats.rs  terminal.rs
src-tauri/src/claude/models/: message.rs  session.rs  stats.rs
src-tauri/src/claude/parser/: jsonl.rs  path_encoder.rs
src-tauri/src/codex/commands/: messages.rs  projects.rs  search.rs  sessions.rs  stats.rs  terminal.rs
src-tauri/src/codex/models/: message.rs  project.rs  session.rs  stats.rs
src-tauri/src/codex/parser/: jsonl.rs  mod.rs  session_scanner.rs
src-tauri/src/conversation/: codex_scanner.rs  cursor_scanner.rs  mod.rs  scanner.rs  state.rs  uploader.rs
src-tauri/src/copilot/commands/: messages.rs  projects.rs  search.rs  sessions.rs  stats.rs  terminal.rs
src-tauri/src/copilot/models/: message.rs  mod.rs  project.rs  session.rs  stats.rs
src-tauri/src/copilot/parser/: mod.rs  session_parser.rs  session_scanner.rs
src-tauri/src/cursor/: mod.rs
src-tauri/src/cursor/api/: auth.rs  mod.rs  usage_csv.rs
src-tauri/src/cursor/commands/: messages.rs  projects.rs  search.rs  sessions.rs  stats.rs  (+1 more)
src-tauri/src/watcher/: fs_watcher.rs
(+59 files in other folders)
