[package]
name = "session-viewer"
version = "0.4.6"
description = "A desktop app to browse AI agent session records"
authors = ["wbin"]
edition = "2021"

[lib]
name = "session_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "7"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
parking_lot = "0.12"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
